--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "google-translate-api-x": "^10.7.2",
+    "ioredis": "^5.4.2",
     "mongoose": "^8.9.6"
   }
 }
