--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +16,10 @@
     "google-translate-api-x": "^10.7.2",
     "ioredis": "^5.4.2",
     "mongoose": "^8.9.6"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "redis-mock": "^0.56.3",
+    "supertest": "^7.0.0"
   }
 }
