--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "jest",
+    "start":"node server.js"
   },
   "author": "",
   "license": "ISC",
